# opensource_cpp_base

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  component.md  pull_request_template.md
.circleci/: config.yml
scripts/mac/: format.sh  generate_coverage.sh  run_tests.sh  setup.sh
src/: main.cpp
src/utils/: CMakeLists.txt  Calculator.cpp  Calculator.h  Logger.cpp  Logger.h  Notifier.cpp  Notifier.h
tests/: CMakeLists.txt
tests/endtoend/: CMakeLists.txt  e2e_test.cpp
tests/integration/: CMakeLists.txt  integration_calculator_logger.cpp  integration_logger_notifier.cpp
tests/unit/: CMakeLists.txt  test_calculator.cpp  test_logger.cpp  test_notifier.cpp
